# data_management

./: README.md  requirements_dev.txt  setup.cfg
data_management/: data_management.py  data_portal.py
data_management/database_models/: create_psql_database.py  database_entry.py  models.py  setup_psql_environment.py  setup_psql_environment.yaml
tests/: testing.py
