[metadata]
# replace with your username:
name = data-management-jtbishop
version = 0.0.1
author = James Bishop
author_email = jtbishop@bu.edu
description = Data gathering tools for BUFC Quant Team 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BUFC-Quant/data_management
project_urls =
    Bug Tracker = https://github.com/BUFC-Quant/data_management/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6